Fixed: Planet Spacing and Card Details Pop-up

--- a/client/src/components/PlanetDetails.css
+++ b/client/src/components/PlanetDetails.css
@@ -1,21 +1,24 @@
 .card {
   background: rgb(255, 255, 255);
   display: inline-block;
-  width: 300px;
+  width: 18vw;
+  height: 42vh;
   border-radius: 5px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 10px 10px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   overflow: hidden;
   text-align: center;
+  font-size: .735rem;
+  visibility: visible;
+  line-height: 1em;
 }
 
 #card-banner {
-    height: 60px;
-    width: 300px;
     background: linear-gradient(90deg, #FC5C7D 0%, #6A82FB 100%);
     overflow: hidden;
 }
 
 #card-banner h1 {
-  position: inherit;
+  margin: 10px 0;
+  text-align: center;
 }
